# aigent

./: .env.example  .gitignore  AUDIT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  deny.toml  install.sh  patch_daemon.py  patch_llm.py  patch_main.py  patch_main_cleanup.py  patch_main_llm.py  patch_main_stream.py  patch_tui.py  patch_tui2.py  patch_tui3.py  test_tui  test_tui.rs  test_ui.rs
.claude/: CLAUDE.md
.gemini/: GEMINI.md
.github/: copilot-instructions.md
.github/workflows/: release.yml  secret-scan.yml
config/: default.toml  default.toml.example
crates/agent/: Cargo.toml
crates/agent/src/: agent_loop.rs  error.rs  events.rs  lib.rs  turn.rs
crates/agent/src/runtime/: chat.rs  mod.rs  reflection.rs  sleep.rs  summarize.rs  tools.rs
crates/agent/src/subagents/: manager.rs  mod.rs  prompts.rs  router.rs  types.rs
crates/aigent-app/: Cargo.toml
crates/aigent-app/src/: main.rs  tui.rs
crates/aigent-audit/src/: events.rs  lib.rs
crates/aigent-config/src/: lib.rs
crates/aigent-core/src/: commands.rs  lib.rs
crates/aigent-daemon/: Cargo.toml
crates/aigent-daemon/src/: client.rs  commands.rs  events.rs  lib.rs  server.rs
crates/aigent-llm/src/: lib.rs
crates/aigent-memory/: Cargo.toml
crates/aigent-memory/src/: event_log.rs  manager.rs  schema.rs  vault.rs
crates/aigent-telegram/src/: lib.rs
crates/aigent-tools/src/: lib.rs
crates/aigent-ui/: Cargo.toml
crates/aigent-ui/src/: app.rs  events.rs  lib.rs  onboard.rs  theme.rs  tui.rs
crates/aigent-ui/src/widgets/: chat.rs  input.rs  mod.rs  sidebar.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: commands.rs  lib.rs  runtime.rs
crates/exec/: Cargo.toml
crates/exec/src/: gait.rs  git.rs  hot_reload.rs  lib.rs  sandbox.rs  tool_chain.rs  wasm.rs
crates/exec/src/gait/: mod.rs  read.rs  types.rs  write.rs
crates/interfaces/cli/: Cargo.toml
crates/interfaces/cli/src/: daemon.rs  interactive.rs  main.rs  memory_cmds.rs  sleep_cmds.rs  tui.rs
crates/interfaces/telegram/: Cargo.toml
crates/interfaces/telegram/src/: lib.rs
crates/interfaces/tui/: Cargo.toml
crates/interfaces/tui/src/: action.rs  agent_panel.rs  app.rs  events.rs  lib.rs  onboard.rs  theme.rs  tui.rs
crates/interfaces/tui/src/components/: chat.rs  command_palette.rs  context_panel.rs  file_picker.rs  footer.rs  input.rs  mod.rs  sidebar.rs  status_bar.rs  vim_input.rs
crates/interfaces/tui/src/layout/: mod.rs
crates/interfaces/tui/src/onboard/: mod.rs  state.rs  ui.rs  wizard.rs
crates/interfaces/tui/src/state/: message.rs  mod.rs
crates/interfaces/tui/src/widgets/: charts.rs  chat.rs  markdown.rs  mod.rs
crates/llm/: Cargo.toml
crates/llm/src/: candle_backend.rs  embedding.rs  lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: consistency.rs  constitution.rs  event_log.rs  identity.rs  index.rs  lib.rs  manager.rs  multi_sleep.rs  profile.rs  retrieval.rs  schema.rs  scorer.rs  sentiment.rs  sleep.rs  store.rs  vault.rs  vector_store.rs
crates/memory/src/manager/: maintenance.rs  mod.rs  node_lifecycle.rs  retrieval.rs  sleep_logic.rs  vault_sync.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: builder.rs  lib.rs  truncate.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent_loop.rs  client.rs  commands.rs  error.rs  events.rs  ext_think.rs  history.rs  lib.rs  micro_profile.rs  prompt_builder.rs  react_loop.rs  runtime.rs  schedule_store.rs  scheduler.rs  server.rs  tool_loop.rs
crates/runtime/src/runtime/: chat.rs  mod.rs  proactive.rs  reflection.rs  sleep.rs  tools.rs
crates/runtime/src/server/: connection.rs  mod.rs  sleep.rs
crates/thinker/: Cargo.toml
crates/thinker/src/: events.rs  ext_loop.rs  json_stream.rs  lib.rs  prompt.rs  router.rs  tool_loop.rs
crates/tools/: Cargo.toml
crates/tools/src/: builtins.rs  lib.rs  marketplace.rs
crates/tools/src/builtins/: browse.rs  cache.rs  calendar.rs  coreutils.rs  datetime.rs  finance.rs  fs.rs  memory_search.rs  mod.rs  scheduler.rs  shell.rs  web.rs  web_browse.rs
docs/: Project_Documentation.md  REFORM.md  agentic-evolution-plan.md  daemon-first-architecture.md  phase-0-2-memory-first-plan.md  phase-review-gate.md
extensions/marketplace/: README.md
extensions/modules-src/: Cargo.toml  build.sh  new-module.sh
extensions/skills-src/: Cargo.toml  build.sh  new-skill.sh
extensions/tools-src/: CREATING_TOOLS.md  Cargo.toml  build.sh  new-tool.sh
extensions/tools-src/read-file/: Cargo.toml  tool.json
extensions/tools-src/read-file/src/: main.rs
extensions/tools-src/run-shell/: Cargo.toml  tool.json
extensions/tools-src/run-shell/src/: main.rs
extensions/tools-src/write-file/: Cargo.toml  tool.json
extensions/tools-src/write-file/src/: main.rs
extensions/wit/: host.wit
scripts/: sleep-learning-test.sh
scripts/config/: default.toml
wit/: host.wit
