[workspace]
members = [
  "crates/interfaces/cli",
  "crates/core",
  "crates/config",
  "crates/memory",
  "crates/llm",
  "crates/exec",
  "crates/tools",
  "crates/interfaces/tui",
  "crates/interfaces/telegram",
  "crates/runtime",
  "crates/audit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/aigent"
authors = ["Aigent Contributors"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "gzip"] }
async-trait = "0.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
sha2 = "0.10"
notify = "6"
redb = "2"
bincode = "2"
lru = "0.12"
chrono-tz = "0.10"
bytes = "1"
libc = "0.2"
wasmtime = { version = "25", default-features = false, features = ["cranelift", "runtime", "component-model"] }
wasmtime-wasi = { version = "25", default-features = false, features = ["preview1"] }
git2 = { version = "0.20", features = ["https", "ssh"] }
scraper = "0.25"
fs2 = "0.4"
percent-encoding = "2.3"
futures = "0.3"
