[workspace]
members = [
  "crates/interfaces/cli",
  "crates/config",
  "crates/memory",
  "crates/llm",
  "crates/exec",
  "crates/tools",
  "crates/thinker",
  "crates/prompt",
  "crates/agent",
  "crates/interfaces/tui",
  "crates/interfaces/telegram",
  "crates/runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/aigent"
authors = ["Aigent Contributors"]

# ── workspace-level feature flags ──────────────────────────────────────────────
# These are *not* automatically forwarded to members — each crate opts in to the
# features it needs.  The flags below let `cargo check --all-features` or
# `--features candle` work from the workspace root via the CLI binary.
[workspace.metadata.features]
default = ["tui-advanced", "candle", "qdrant"]
tui-advanced = []
candle       = []
qdrant       = []
marketplace  = []

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
cron = "0.15"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "gzip"] }
async-trait = "0.1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
sha2 = "0.10"
notify = "6"
redb = "2"
bincode = "2"
lru = "0.12"
chrono-tz = "0.10"
bytes = "1"
libc = "0.2"
wasmtime = { version = "25", default-features = false, features = ["cranelift", "runtime", "component-model"] }
wasmtime-wasi = { version = "25", default-features = false, features = ["preview1"] }
git2 = { version = "0.20", features = ["https", "ssh"] }
scraper = "0.25"
fs2 = "0.4"
percent-encoding = "2.3"
futures = "0.3"
url = "2.5"

# ── native coreutils / FS helpers ──────────────────────────────────────────────
walkdir = "2"
ignore = "0.4"
globset = "0.4"
regex = "1"
