[package]
name = "aigent-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

aigent-config = { path = "../config" }
aigent-llm = { path = "../llm" }
aigent-memory = { path = "../memory" }
aigent-prompt = { path = "../prompt" }
aigent-thinker = { path = "../thinker" }
aigent-tools = { path = "../tools" }

[features]
default = []
candle = ["aigent-llm/candle"]
