[package]
name = "aigent-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
dotenvy.workspace = true
ratatui.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

aigent-config = { path = "../aigent-config" }
aigent-core = { path = "../aigent-core" }
aigent-daemon = { path = "../aigent-daemon" }
aigent-llm = { path = "../aigent-llm" }
aigent-memory = { path = "../aigent-memory" }
aigent-telegram = { path = "../aigent-telegram" }
aigent-ui = { path = "../aigent-ui" }
tui-textarea = "0.7.0"
pulldown-cmark = "0.13.0"
syntect = "5.2.0"
once_cell = "1.21.3"
arboard = "3.6.1"
fuzzy-matcher = "0.3.7"
ignore = "0.4.25"
fs2 = "0.4"
