[package]
name = "aigent-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

aigent-config = { path = "../aigent-config" }
aigent-core = { path = "../aigent-core" }
aigent-llm = { path = "../aigent-llm" }
aigent-memory = { path = "../aigent-memory" }

