[package]
name = "aigent-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

aigent-config = { path = "../config" }
aigent-core = { path = "../core" }
aigent-tools = { path = "../tools" }

