[package]
name = "aigent-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Default features: WASM tool loading is always on.
## sandbox is default-on — it is a graceful no-op on platforms where it is not
## implemented (anything other than Linux and macOS).
default = ["wasm", "sandbox"]
## Enable platform sandboxing (no-new-privs on Linux, sandbox_init on macOS).
sandbox = ["dep:libc"]
## Enable wasmtime WASM tool loading.
wasm = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:bytes"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

aigent-config = { path = "../config" }
aigent-tools = { path = "../tools" }

# WASM runtime (optional – loaded at runtime when .wasm guests are present)
wasmtime        = { workspace = true, optional = true }
wasmtime-wasi   = { workspace = true, optional = true }
bytes           = { workspace = true, optional = true }

# Platform sandboxing (optional – enabled via `sandbox` feature)
libc = { workspace = true, optional = true }

# Native git operations (gait) — uses libgit2 for safe, in-process git.
git2 = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"

