[package]
name = "aigent-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
candle = ["dep:candle-core", "dep:candle-transformers", "dep:candle-nn", "dep:tokenizers"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

tracing.workspace = true

# Candle local inference (optional)
candle-core         = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
candle-nn           = { version = "0.8", optional = true }
tokenizers          = { version = "0.20", default-features = false, features = ["onig"], optional = true }

