[package]
name = "aigent-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2.workspace = true
notify.workspace = true
redb.workspace = true
bincode.workspace = true
lru.workspace = true

aigent-core = { path = "../core" }
