[package]
name = "aigent-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
qdrant = ["dep:qdrant-client"]

[dependencies]
aigent-config = { path = "../config" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
regex.workspace = true
sha2.workspace = true
notify.workspace = true
redb.workspace = true
bincode.workspace = true
lru.workspace = true

# Qdrant vector database (optional)
qdrant-client = { version = "1.17", optional = true }
