[package]
name = "aigent-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
uuid.workspace = true

aigent-config = { path = "../config" }
aigent-memory = { path = "../memory" }
aigent-thinker = { path = "../thinker" }
aigent-tools = { path = "../tools" }
