[package]
name = "aigent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest.workspace = true

iana-time-zone = "0.1"
cron.workspace = true

aigent-config = { path = "../config" }
aigent-exec = { path = "../exec" }
aigent-llm = { path = "../llm" }
aigent-memory = { path = "../memory" }
aigent-prompt = { path = "../prompt" }
aigent-thinker = { path = "../thinker" }
aigent-tools = { path = "../tools" }

[features]
default = []
candle = ["aigent-llm/candle"]

[dev-dependencies]
tempfile = "3"
