[package]
name = "aigent-thinker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

aigent-exec = { path = "../exec" }
aigent-llm = { path = "../llm" }
aigent-tools = { path = "../tools" }
