[package]
name = "aigent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true
tokio.workspace = true
scraper.workspace = true
fs2.workspace = true
percent-encoding.workspace = true
futures.workspace = true
url.workspace = true
lru.workspace = true
walkdir.workspace = true
ignore.workspace = true
globset.workspace = true
regex.workspace = true
cron.workspace = true

[features]
## When enabled, selected coreutils tools delegate to system coreutils binaries
## (or a uutils/coreutils installation) for improved POSIX compliance.
## Requires `sort`, `head`, etc. to be available on $PATH.
uutils = []
marketplace = []
