[package]
name = "aigent-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
dotenvy.workspace = true
ratatui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

aigent-config = { path = "../../config" }
aigent-core = { path = "../../core" }
aigent-runtime = { path = "../../runtime" }
aigent-llm = { path = "../../llm" }
aigent-memory = { path = "../../memory" }
aigent-telegram = { path = "../telegram" }
aigent-ui = { path = "../tui" }
tui-textarea = "0.7.0"
pulldown-cmark = "0.13.0"
syntect = "5.2.0"
once_cell = "1.21.3"
arboard = "3.6.1"
fuzzy-matcher = "0.3.7"
ignore = "0.4.25"
fs2 = "0.4"
