[package]
name = "aigent-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

aigent-runtime = { path = "../../runtime" }
aigent-llm = { path = "../../llm" }
aigent-memory = { path = "../../memory" }

