[package]
name = "aigent-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
chrono.workspace = true
color-eyre = "0.6"
tui-textarea = "0.7"
termimad = "0.31"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
fuzzy-matcher = "0.3.7"
ignore = "0.4.25"
arboard = "3.6.1"

aigent-config = { path = "../../config" }
aigent-runtime = { path = "../../runtime" }

